# glaucoma-dfl-scheduling

./: .gitignore  DEBUGGING_NOTES.md  README.md  config.py  pyproject.toml
analysis/: plot_main_comparison.py  plot_per_seed.py  plot_sigma_sweep.py
analysis/.ipynb_checkpoints/: plot_per_seed-checkpoint.py
docs/: availability_scheduling_guide.md  cohort_confound_issue.md  exp1_results.md  exp2_all_results.md  exp2_fix_results.md  exp2_results.md  experiment_plan_v4_availability.md  implementation_plan.md  implementation_spec.md  project_design.md  running_instructions.md  v4_implementation_spec.md
scripts/: run_exp2.sh  run_exp2_fixes.sh  run_exp2_sigma_sweep2.sh
src/: allocation.py  dataset.py  eval_binary.py  evaluate.py  generate_availability.py  losses.py  model.py  plot_results.py  simulate_availability.py  train_M1.py  train_M2.py  train_M2a.py  train_M2b.py  train_M3.py  train_M4.py
src/dataset_construction/: construct_datasets_v2.py  data_pipeline_v2.py
src/previous_exp/: best_hyperparameters.json  vgg19_ordering_exp.py
tests/: test_solver_availability.py
